# rsurl

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml  release-plz.yml
curl-compat/: Cargo.toml  README.md  build.rs  libcurl.map
curl-compat/include/curl/: curl.h
curl-compat/src/: consts.rs  easy.rs  lib.rs  multi.rs  version.rs
curl-compat/tests/: csmoke.rs  easy.c  easy_smoke.rs  multi.c  multi_smoke.rs  smoke.c
include/: curlrs.h  rsurl.h
man/: rsurl.1
src/: aio.rs  cancel.rs  cli.rs  compress.rs  cookie.rs  dict.rs  digest.rs  download.rs  error.rs  ffi.rs  file.rs  ftp.rs  gopher.rs  http.rs  http2.rs  http3.rs  idn.rs  imap.rs  ldap.rs  lib.rs  mqtt.rs  multi.rs  pool.rs  pop3.rs  resume.rs  rtsp.rs  sigv4.rs  smtp.rs  ssh.rs  telnet.rs  test_support.rs  tftp.rs  tls.rs  transfer.rs  url.rs  websocket.rs
src/aio/: wasm.rs  ws.rs
src/bittorrent/: bencode.rs  dht.rs  download.rs  engine.rs  magnet.rs  metadata.rs  metainfo.rs  mod.rs  peer.rs  picker.rs  seed.rs  storage.rs  tracker.rs
src/io/: asyncio.rs  asynctls.rs  blocking.rs  machine.rs  mod.rs  runtime.rs  tokio.rs
src/net/: client.rs  connector.rs  mod.rs  proxy_resolver.rs  resolver.rs  socks.rs  stream.rs  udp.rs
src/proto/: http1.rs  mod.rs  tls.rs
src/tls/: client_auth.rs  common.rs  mod.rs  pc_roots.rs  purecrypto.rs  rustls.rs
tests/: integration_bittorrent.rs  integration_http.rs  integration_multi.rs  integration_parallel.rs  integration_resume.rs  integration_websocket.rs
tests/common/: mod.rs
