[package]
name = "rsurl"
version = "0.0.4"
edition = "2021"
rust-version = "1.95"
authors = ["Karpelès Lab Inc."]
description = "A pure-Rust implementation of curl. Library, C FFI, and CLI for HTTP/HTTPS/FTP/FTPS."
license = "MIT"
repository = "https://github.com/KarpelesLab/rsurl"
readme = "README.md"
keywords = ["http", "https", "curl", "client", "tls"]
categories = ["network-programming", "web-programming::http-client", "command-line-utilities"]

[lib]
name = "rsurl"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "rsurl"
path = "src/bin/rsurl.rs"

[features]
# Default keeps the historical behaviour: a single TLS backend layered on
# purecrypto, no extra C-free guarantees lost.
default = ["purecrypto-tls", "idn"]
# Use purecrypto's TLS stack (purecrypto::tls). No additional deps.
purecrypto-tls = []
# Use rustls 0.23 + ring instead. Enable with
#   --no-default-features --features rustls-tls
# When both `purecrypto-tls` and `rustls-tls` are active, rustls wins (see
# the cfg cascade in src/tls/mod.rs). HTTP/3 always uses purecrypto's TLS
# regardless of this feature, because the QUIC stack is bound to it.
rustls-tls = ["dep:rustls", "dep:rustls-pemfile"]
# Internationalized Domain Name (IDN) support: normalise Unicode hostnames to
# ASCII/punycode (UTS-46) before they hit DNS, the `Host:` header, and TLS SNI —
# matching curl's default. On by default; build with `--no-default-features`
# (plus a TLS backend) to drop both the code path and the `idna` dependency and
# its Unicode tables. The runtime `--no-idn` flag / `Request::idn(false)` still
# compile in either way (they no-op without this feature). `idna` is pure Rust
# (no C), so the no-C-toolchain guarantee is preserved.
idn = ["dep:idna"]

[dependencies]
# Required regardless of TLS backend: SHA1 + RNG (WebSocket, MQTT), X.509
# parsing for verbose cert display, and the QUIC stack behind HTTP/3.
purecrypto = "0.2"
# rustls-tls backend. `ring` is selected explicitly so cross-platform builds
# don't pull in cmake/nasm (which the default `aws-lc-rs` provider needs on
# Windows). `tls12` is opt-in in rustls 0.23; we want it on for parity with
# the purecrypto backend.
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring", "tls12", "logging"] }
rustls-pemfile = { version = "2", optional = true }
# gzip / zlib / raw-deflate / zstd / brotli / lzw codecs. `compcol` is our own
# pure-Rust compression collection; `std` enables the `io` adapter we use to
# bound decompressed output via `LimitedDecoder`. The `zstd`, `brotli` and
# `lzw` features are pure-Rust (each only pulls in `alloc`, no `*-sys` C crate),
# so we can decode those response encodings without breaking the no-C guarantee.
# `lzw` is the Unix `compress(1)` / `.Z` format. `factory` and `rle` are not
# needed here, so leave default features off and opt in to only what we use.
compcol = { version = "0.4", default-features = false, features = ["std", "gzip", "zlib", "zstd", "brotli", "lzw"] }
# Pure-Rust SSH stack (same lab, built on purecrypto) behind the `sftp://` and
# `scp://` schemes. Default-on, not feature-gated. We take only the `client`
# feature (implies `std`; exposes `client`, `sftp`, `scp`, `known_hosts`, `key`)
# plus `compress` (zlib@openssh.com). We deliberately do NOT enable `server`,
# `multichannel`, `ffi`, or — critically — `pam`: the `pam` feature pulls
# `pam-client2`, a C/FFI crate that would break the no-C-toolchain guarantee.
# On unix, puressh unconditionally depends on `libc`/`nix`, but those are
# pure-Rust FFI *binding* crates (extern decls against the libc that std
# already links) — no build-time C compiler, cmake, bindgen, or `*-sys` crate —
# so the default purecrypto build stays free of any compiled-C dependency.
puressh = { version = "0.0.3", default-features = false, features = ["client", "compress"] }
# Real Mozilla Public Suffix List for cookie eTLD scoping — rejects over-broad
# `Domain=co.uk`/`Domain=github.io` "supercookie" attributes that a dot-count
# heuristic can't catch (see `src/cookie.rs`). Taken with `default-features =
# false` so we use only psl2's `#![no_std]`, allocation-free `lookup` core: no
# `idna`, no `alloc` convenience layer, and therefore no extra transitive deps.
# The PSL data is embedded as pure-Rust tables, so the no-C-toolchain /
# minimal-dependency guarantee stays intact.
psl2 = { version = "0.1", default-features = false }
# IDN / UTS-46 host normalisation (Unicode → punycode), behind the `idn`
# feature. Pure Rust (no C / no `*-sys` crate); `compiled_data` ships the
# Unicode tables and keeps `idna::domain_to_ascii` available with
# `default-features = false`, so no extra transitive deps come along.
idna = { version = "1", optional = true, default-features = false, features = ["alloc", "compiled_data"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
