[package]
name = "rsurl"
version = "0.1.5"
edition = "2021"
rust-version = "1.88"
authors = ["Karpelès Lab Inc."]
description = "A pure-Rust implementation of curl. Library, C FFI, and CLI for HTTP/HTTPS/FTP/FTPS."
license = "MIT"
repository = "https://github.com/KarpelesLab/rsurl"
readme = "README.md"
keywords = ["http", "https", "curl", "client", "tls"]
categories = ["network-programming", "web-programming::http-client", "command-line-utilities"]

# This crate is intentionally NOT a Cargo workspace. `curl-compat/` is a
# standalone sub-crate (a libcurl-ABI drop-in built on this one) that is
# excluded from the normal `cargo build`/`cargo test` here; build it separately
# when needed with `cargo build --release --manifest-path curl-compat/Cargo.toml`.

[lib]
name = "rsurl"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "rsurl"
path = "src/bin/rsurl.rs"

[features]
# Default keeps the historical behaviour: a single TLS backend layered on
# purecrypto, plus the SSH and BitTorrent stacks. An HTTP-only consumer can drop
# both with `--no-default-features --features purecrypto-tls,idn`, which also
# stops `puressh` from being pulled in at all.
default = ["purecrypto-tls", "idn", "bittorrent", "ssh"]
# BitTorrent client (`.torrent` / `magnet:`): bencode, trackers, DHT, peer wire
# protocol, seeding. Pure Rust on `purecrypto` + std — adds no new dependency,
# so the feature is purely organizational (lets it be compiled out).
bittorrent = []
# SSH transports — `sftp://` and `scp://`, download and upload — built on the
# pure-Rust `puressh` crate. On by default; drop it (and the `puressh`
# dependency, plus its `libc`/`nix` bindings) with `--no-default-features` for an
# HTTP-only build that doesn't want a full SSH client linked in. With the
# feature off, `sftp`/`scp` URLs are rejected with `Error::UnsupportedScheme`.
ssh = ["dep:puressh"]
# Use purecrypto's TLS stack (purecrypto::tls). No additional deps.
purecrypto-tls = []
# Use rustls 0.23 + ring instead. Enable with
#   --no-default-features --features rustls-tls
# When both `purecrypto-tls` and `rustls-tls` are active, rustls wins (see
# the cfg cascade in src/tls/mod.rs). HTTP/3 always uses purecrypto's TLS
# regardless of this feature, because the QUIC stack is bound to it.
rustls-tls = ["dep:rustls", "dep:rustls-pemfile", "dep:cacrt"]
# Internationalized Domain Name (IDN) support: normalise Unicode hostnames to
# ASCII/punycode (UTS-46) before they hit DNS, the `Host:` header, and TLS SNI —
# matching curl's default. On by default; build with `--no-default-features`
# (plus a TLS backend) to drop both the code path and the `intl` dependency and
# its Unicode tables. The runtime `--no-idn` flag / `Request::idn(false)` still
# compile in either way (they no-op without this feature). `intl` is pure Rust
# (no C, no transitive deps), so the no-C-toolchain guarantee is preserved.
idn = ["dep:intl"]
# `Response::json::<T>()` via serde + serde_json (both pure-Rust, no C). Off by
# default so the base build pulls neither; enable with `--features json`.
json = ["dep:serde", "dep:serde_json"]
# Built-in Tokio adapter for the async (sans-IO) driver. Off by default so the
# base build — and especially the http-only build — pulls in NO async runtime;
# the async core is runtime-agnostic (the quinn model) and only this adapter
# names `tokio`. Enable with `--features tokio-rt`.
tokio-rt = ["dep:tokio"]
# C ABI (the libcurl-shaped `rsurl_*` "easy" API in `src/ffi.rs`). Off by
# default: it only matters when building rsurl *as* a C library — a plain
# `cargo build --features ffi` then emits the `rsurl_*` symbols into the
# cdylib/staticlib (link `tests/ffi_smoke.c` against them). Gating it keeps the
# `#[no_mangle] extern "C"` surface out of pure-Rust consumers, who would
# otherwise carry those un-elidable, clash-prone global symbols in their
# binaries. (The cdylib/staticlib crate-types still build without it, just with
# no rsurl_* symbols — `crate-type` can't be feature-conditional in Cargo.)
ffi = []

[dependencies]
# Optional, only for the `json` feature (`Response::json`). Pure Rust, no C.
serde = { version = "1", optional = true, default-features = false }
serde_json = { version = "1", optional = true }
# Required regardless of TLS backend: SHA1 + RNG (WebSocket, MQTT), X.509
# parsing for verbose cert display, and the QUIC stack behind HTTP/3.
# 0.6.8 adds the peer-certificate / close_notify accessors we use for HTTP/3
# public-key pinning + SAN checks and TLS truncation detection; 0.6.14 lowers
# the declared MSRV to 1.88 (matching this crate — see `rust-version` above).
# NATIVE-ONLY: purecrypto's `OsRng` is gated to std+unix/windows, so it does not
# build on `wasm32-unknown-unknown`. Only the (wasm-gated) net/proto/tls stack
# uses it, so it lives in the `cfg(not(wasm32))` target table below.
# Embedded CA trust bundle (curated Mozilla-derived roots as static DER). The
# purecrypto backend reaches it via `RootCertStore::with_embedded_roots()`;
# the rustls backend needs the raw DER directly, so `cacrt` is pulled in as a
# direct (optional) dependency only under `rustls-tls`. Same crate purecrypto
# already embeds, so cargo dedups — no duplicated cert data. This is what lets
# TLS verification work out of the box on every platform (notably Windows,
# which has no Unix CA path) without reading the OS trust store.
cacrt = { version = "0.1", optional = true }
# Zero out client private-key material (the `--key`/`--pass` bytes held in
# `TlsOpts`) on drop, so a long-lived process doesn't leave decrypted key
# bytes lingering in freed heap. Pure Rust, no C. NATIVE-ONLY (only the gated
# TLS stack uses it) — see the `cfg(not(wasm32))` target table below.
# rustls-tls backend. `ring` is selected explicitly so cross-platform builds
# don't pull in cmake/nasm (which the default `aws-lc-rs` provider needs on
# Windows). `tls12` is opt-in in rustls 0.23; we want it on for parity with
# the purecrypto backend.
rustls = { version = "0.23", optional = true, default-features = false, features = ["std", "ring", "tls12", "logging"] }
rustls-pemfile = { version = "2", optional = true }
# gzip / zlib / raw-deflate / zstd / brotli / lzw codecs. `compcol` is our own
# pure-Rust compression collection; `std` enables the `io` adapter we use to
# bound decompressed output via `LimitedDecoder`. The `zstd`, `brotli` and
# `lzw` features are pure-Rust (each only pulls in `alloc`, no `*-sys` C crate),
# so we can decode those response encodings without breaking the no-C guarantee.
# `lzw` is the Unix `compress(1)` / `.Z` format. `factory` and `rle` are not
# needed here, so leave default features off and opt in to only what we use.
# `qpack` (RFC 9204, pulls in `hpack`) is HTTP/3 header compression — the
# encoder (Huffman + dynamic table) and decoder used by `crate::http3`.
# NATIVE-ONLY (the browser decompresses responses itself) — see the
# `cfg(not(wasm32))` target table below.
# Pure-Rust SSH stack (same lab, built on purecrypto) behind the `sftp://` and
# `scp://` schemes. Optional, gated by the default-on `ssh` feature so HTTP-only
# consumers can drop it entirely (`--no-default-features`). We take only the
# `client` feature (implies `std`; exposes `client`, `sftp`, `scp`,
# `known_hosts`, `key`) plus `compress` (zlib@openssh.com). We deliberately do
# NOT enable `server`, `multichannel`, `ffi`, or — critically — `pam`: the `pam`
# feature pulls `pam-client2`, a C/FFI crate that would break the no-C-toolchain
# guarantee. On unix, puressh unconditionally depends on `libc`/`nix`, but those
# are pure-Rust FFI *binding* crates (extern decls against the libc that std
# already links) — no build-time C compiler, cmake, bindgen, or `*-sys` crate —
# so the default purecrypto build stays free of any compiled-C dependency.
puressh = { version = "0.0.6", optional = true, default-features = false, features = ["client", "compress"] }
# Real Mozilla Public Suffix List for cookie eTLD scoping — rejects over-broad
# `Domain=co.uk`/`Domain=github.io` "supercookie" attributes that a dot-count
# heuristic can't catch (see `src/cookie.rs`). Taken with `default-features =
# false` so we use only psl2's `#![no_std]`, allocation-free `lookup` core: no
# `idna`, no `alloc` convenience layer, and therefore no extra transitive deps.
# The PSL data is embedded as pure-Rust tables, so the no-C-toolchain /
# minimal-dependency guarantee stays intact. NATIVE-ONLY (cookies are
# browser-managed on wasm) — see the `cfg(not(wasm32))` target table below.
# IDN / UTS-46 host normalisation (Unicode → punycode), behind the `idn`
# feature, via the first-party pure-Rust `intl` i18n crate (same lab). We take
# only its `idna` feature (pulls `normalization` + `bidi` + the BMP property
# tables as const-fn lookups; implies `alloc`). No C / no `*-sys` crate and no
# transitive dependencies, so the no-C-toolchain / minimal-dependency guarantee
# stays intact. `intl::unicode::idna::to_ascii` applies stricter UTS-46/IDNA2008
# validation than the old `idna` crate (bidi, CONTEXTJ, hyphen, leading-mark and
# trailing-dot rules) — see `src/idn.rs`.
intl = { version = "0.4.1", optional = true, default-features = false, features = ["idna"] }
# Optional Tokio adapter for the async sans-IO driver, behind the `tokio-rt`
# feature. Off by default — the base/http-only builds pull in no async runtime.
# Only the `src/io/tokio.rs` adapter references it; the async core stays
# runtime-agnostic. `macros`/`rt` are needed so the adapter is usable (and
# testable with `#[tokio::test]`) on its own.
tokio = { version = "1", optional = true, default-features = false, features = ["net", "time", "io-util", "rt", "macros"] }

# ── Native-only backends ─────────────────────────────────────────────────────
# The pure-Rust crypto/compression/PSL stack rsurl's own net/proto/tls layer is
# built on. None of it is reachable on `wasm32-unknown-unknown` (the browser
# owns TLS, decompression, and cookie scoping), and `purecrypto` in particular
# does not even compile there (its `OsRng` is std+unix/windows only). Keeping
# these out of the wasm dependency graph is what lets the crate build for the
# browser at all. All pure Rust, no C toolchain — see the per-crate notes above.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
purecrypto = "0.6.17"
zeroize = "1"
compcol = { version = "0.6.6", default-features = false, features = ["std", "gzip", "zlib", "zstd", "brotli", "lzw", "qpack"] }
psl2 = { version = "0.1", default-features = false }

# ── Browser (wasm32) backend ────────────────────────────────────────────────
# On `wasm32-unknown-unknown` rsurl cannot open sockets or run its own TLS/HTTP
# stack — the browser does. The unified async API (`crate::aio`) therefore routes
# HTTP through the Fetch API and WebSockets through the native `WebSocket`
# object, via these bindings. Native builds never pull them in (the whole
# `net`/`proto`/`tls` stack and every socket-bound protocol module is
# `#[cfg(not(target_arch = "wasm32"))]` instead). All pure Rust, no C.
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# The WebSocket receive bridge turns browser `onmessage` callbacks into an async
# stream; `alloc`-only (no std) keeps these wasm-friendly. `futures-channel`
# supplies the mpsc/oneshot the closures push into; `futures-util` supplies the
# `StreamExt::next` the async `recv` awaits.
# `std` is needed for `mpsc` (the message bridge); `wasm32-unknown-unknown` has
# std, it just can't do blocking I/O — which the browser event loop never asks
# of these channels.
futures-channel = { version = "0.3", default-features = false, features = ["std"] }
futures-util = { version = "0.3", default-features = false, features = ["std"] }
web-sys = { version = "0.3", features = [
    "Window",
    "WorkerGlobalScope",
    "Request",
    "RequestInit",
    "RequestRedirect",
    "Response",
    "Headers",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "BinaryType",
] }

[dev-dependencies]
# Used only by the WebSocket integration test's in-process echo server to
# compute the `Sec-WebSocket-Accept` SHA-1 (already a normal dependency).
purecrypto = "0.6.17"
# Async combinators (FuturesUnordered) for the `tokio-rt` adapter tests that
# demonstrate concurrent transfer fan-out. Dev-only — never in the library.
futures-util = { version = "0.3", default-features = false, features = ["std"] }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
